--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,9 @@
 <html>
   <head>
     <link rel='stylesheet' href='/vendor/bootstrap/dist/css/bootstrap.css' />
+    <script>
+      var USE_OAUTH = <%= USE_OAUTH %>; 
+    </script>
     <script src='/dist/bundle.js' defer></script>
     <title>A React/Redux Template</title>
   </head>
