--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
   <head>
     <link rel='stylesheet' href='/vendor/bootstrap/dist/css/bootstrap.css' />
     <script>
-      var USE_OAUTH = <%= USE_OAUTH %>; 
+      var GOOGLE_OAUTH = <%= GOOGLE_OAUTH %>; 
     </script>
     <script src='/dist/bundle.js' defer></script>
     <title>A React/Redux Template</title>
