enable github oauth

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,6 +3,7 @@
     <link rel='stylesheet' href='/vendor/bootstrap/dist/css/bootstrap.css' />
     <script>
       var GOOGLE_OAUTH = <%= GOOGLE_OAUTH %>; 
+      var GITHUB_OAUTH = <%= GITHUB_OAUTH %>; 
     </script>
     <script src='/dist/bundle.js' defer></script>
     <title>A React/Redux Template</title>
