--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
     <script>
       var GOOGLE_OAUTH = <%= GOOGLE_OAUTH %>; 
       var GITHUB_OAUTH = <%= GITHUB_OAUTH %>; 
+      var FACEBOOK_OAUTH = <%= FACEBOOK_OAUTH %>; 
     </script>
     <script src='/dist/bundle.js' defer></script>
     <title>A React/Redux Template</title>
