modal on deleting a product

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,8 @@
       var GITHUB_OAUTH = <%= GITHUB_OAUTH %>; 
       var FACEBOOK_OAUTH = <%= FACEBOOK_OAUTH %>; 
     </script>
+    <script src='/vendor/jquery/dist/jquery.min.js'></script>
+    <script src='/vendor/bootstrap/dist/js/bootstrap.min.js' ></script>
     <script src='/dist/bundle.js' defer></script>
     <title>A React/Redux Template</title>
   </head>
