--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,6 +6,7 @@
       var GITHUB_OAUTH = <%= GITHUB_OAUTH %>; 
       var FACEBOOK_OAUTH = <%= FACEBOOK_OAUTH %>; 
     </script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=<%= GOOGLE_PLACES_KEY %>&libraries=places"></script>
     <script src='/vendor/jquery/dist/jquery.min.js'></script>
     <script src='/vendor/bootstrap/dist/js/bootstrap.min.js' ></script>
     <script src='/dist/bundle.js' defer></script>
